2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/05_Unarr.deca
// Description:
//    tests de programme correct, utilisation des unaires
//
// Resultats:
//    programme correct.
//
// Historique:
//    cree le 09/01/2024
{    
    int x,y,z;
    x = -2;
    y = -3;
    z = (x+y)*-4;

}