2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/30_FLeq.deca
// Description:
//    tests de programme incorrect syntaxiquement ,LEQ incorrecte car absence du membre doite
//
// Resultats:
//    ligne 11 : Erreur, mismatched input '<='
//
// Historique:
//    cree le 09/01/2024
{
    float x = 0.5;
    <= 4 ; 
}